--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pentatonic Fretboard</title>
+  <title>Pentatonic Fretboard (Canvas)</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -18,18 +18,8 @@
       <option value="C">C</option>
     </select>
   </div>
-  <div class="fretboard">
-    <div class="pattern-labels" id="pattern-labels"></div>
-    <div class="strings" id="strings">
-      <div>E</div><div>B</div><div>G</div><div>D</div><div>A</div><div>E</div>
-    </div>
-    <div class="frets">
-      <div class="fret-labels"></div>
-      <div class="fretboard-grid" id="fretboard-grid"></div>
-    </div>
-  </div>
+  <canvas id="fretboard" width="920" height="300"></canvas>
   <div class="info" id="info"></div>
-  <!-- lbl: Added data.js script -->
   <script src="data.js"></script>
   <script src="script.js"></script>
 </body>
